--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              Welcome to my portfolio site! I am John Wick, an experienced and highly skilled UI/UX and Full-stack Developer based in Bangalore, India. With a strong background in MERN stack development, system design, and frontend and backend development, I am passionate about creating user-centered web designs and delivering high-quality projects from concept to completion.
+              Welcome to my portfolio site! I am Pratik Karale, an experienced and highly skilled UI/UX and Full-stack Developer based in Bangalore, India. With a strong background in MERN stack development, system design, and frontend and backend development, I am passionate about creating user-centered web designs and delivering high-quality projects from concept to completion.
             </p>
             <p>
              When you choose me, you're selecting a web designer and developer who is committed to providing visually stunning designs and innovative solutions. Get in touch with me today to discuss how we can bring your vision to life! 🚀
@@ -681,11 +681,11 @@
               <div class="testimonial-item">
                 <!-- <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt=""> -->
                 <h3>Prakash Agate</h3>
-                <h4>Engineer</h4>
+                <h4>Software Engineer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I'm extremely impressed with Pratik's web design skills. They created a visually stunning and
-                  user-friendly website that perfectly aligned with my brand. Their creativity and professionalism
+                  I'm extremely impressed with Pratik's web design skills. His created a visually stunning and
+                  user-friendly website that perfectly aligned with my brand. His creativity and professionalism
                   exceeded my expectations.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -695,7 +695,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <!-- <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt=""> -->
-                <h3>Sarah M.</h3>
+                <h3>Lohith M.</h3>
                 <h4>Small Business Owner</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -709,25 +709,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <!-- <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt=""> -->
-                <h3>Amari C.</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Pratik Karale, the exceptional fullstack expert, made our complex web project a breeze.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
                 <!-- <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt=""> -->
                 <h3> Emily Stevens</h3>
                 <h4>Entrepreneur</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Pratik captured our brand quite perfectly and I was impressed by his work.
+                  Pratik captured our brand quit perfectly and I was impressed by his work.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
