--- a/portfolio-details-blog.html
+++ b/portfolio-details-blog.html
@@ -49,7 +49,8 @@
 
                 <!-- <div class="swiper-slide"> -->
                   <!-- <img src="assets/img/portfolio/ecommerce-app.gif" alt=""> -->
-                  <video src="./assets/img/portfolio/pratiksblog.mp4" controls style="width: 100%;"></video>
+                  <!-- <video src="./assets/img/portfolio/pratiksblog.mp4" controls style="width: 100%;"></video> -->
+                  <iframe  style="width: 100%;height: 300px;" src="https://www.youtube.com/embed/caUmFJEaa3A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <!-- </div> -->
 
                 <!-- <div class="swiper-slide">
@@ -87,7 +88,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                A sophisticated blog app with a range of essential features for seamless content management. This application empowers users to effortlessly create, edit, and delete blogs, while also enabling them to engage through comments. Notably, robust measures have been implemented to ensure secure access and protect user data, providing peace of mind. With its user-friendly interface and intuitive design, this project fosters an engaging and interactive environment for bloggers. Embrace this transformative project that redefines the way content is shared and the blogging experience is enhanced.
+                A blog app with a range of essential features for seamless content management. This application empowers users to effortlessly create, edit, and delete blogs, while also enabling them to engage through comments. Notably, robust measures have been implemented to ensure secure access and protect user data, providing peace of mind. With its user-friendly interface and intuitive design, this project fosters an engaging and interactive environment for bloggers.
               </p>
             </div>
           </div>
