--- a/portfolio-details-ecommerce-app.html
+++ b/portfolio-details-ecommerce-app.html
@@ -87,7 +87,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                Introducing this high-tech and elegant eCommerce app, developed using HTML, CSS, Bootstrap, JavaScript, Django, and SQLite. This project offers a seamless user experience, featuring category selection, a powerful search feature, the ability to add items to the cart, and a streamlined checkout option. The app's sleek design and advanced functionalities provide an exceptional online shopping experience. Experience the future of eCommerce with this cutting-edge app.
+                An eCommerce app, developed using HTML, CSS, Bootstrap, JavaScript, Django, and SQLite. This project offers a seamless user experience, featuring category selection, a powerful search feature, the ability to add items to the cart, and a streamlined checkout option. The app's sleek design and advanced functionalities can provide an exceptional online shopping experience.
               </p>
             </div>
           </div>
