--- a/portfolio-details-iot-app.html
+++ b/portfolio-details-iot-app.html
@@ -76,7 +76,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                A feature-rich IoT home application built using C++, HTML, CSS, and JavaScript. This project offers users seamless control over various household elements, including fans, doors, and lights in each room. Additionally, it provides the functionality to manage the electricity supply to individual rooms and control the water motor and electric switch for the entire house. Users can also monitor the status of the front door. With a user-friendly interface and leveraging the power of C++, HTML, CSS, and JavaScript, this project empowers users to efficiently interact with their IoT devices, enhancing convenience and control over their home environment. Experience the versatility and innovation of this project as it revolutionizes the way we interact with our homes.
+                A feature-rich IoT home application built using C++, HTML, CSS, and JavaScript. This project offers users seamless control over various household elements, including fans, doors, and lights in each room. Additionally, it provides the functionality to manage the electricity supply to individual rooms and control the water motor and electric switch for the entire house. Users can also monitor the status of the front door. With a user-friendly interface and leveraging the power of C++, HTML, CSS, and JavaScript, this project empowers users to efficiently interact with their IoT devices, enhancing convenience and control over their home environment.
               </p>
             </div>
           </div>
