--- a/portfolio-details-school.html
+++ b/portfolio-details-school.html
@@ -94,7 +94,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                Presenting a collaborative open-source project for school management—a formal and efficient web app. This comprehensive application enables seamless attendance checking, mark review, exam performance monitoring, event notifications, and weekly task updates. Leveraging the collective expertise of contributors, including my own contributions in HTML, CSS, JavaScript, and React, we have enhanced the attendance calendar and implemented interactive charts for visualizing student data. This collaborative effort ensures a seamless user experience, emphasizing efficiency and intuitive functionality. Join us in revolutionizing school management with this sophisticated open-source web app.
+                Presenting a collaborative open-source project for school management—a formal and efficient web app. This comprehensive application enables seamless attendance checking, mark review, exam performance monitoring, event notifications, and weekly task updates. Leveraging the collective expertise of contributors, including my own contributions in HTML, CSS, JavaScript, and React, we have enhanced the attendance calendar and implemented interactive charts for visualizing student data. This collaborative effort ensures a seamless user experience, emphasizing efficiency and intuitive functionality.
               </p>
             </div>
           </div>
