--- a/portfolio-details-social.html
+++ b/portfolio-details-social.html
@@ -49,7 +49,8 @@
 
                 <!-- <div class="swiper-slide"> -->
                   <!-- <img src="assets/img/portfolio/ecommerce-app.gif" alt=""> -->
-                  <video src="./assets/img/portfolio/sociopedia-demo.mp4" controls style="width: 100%;"></video>
+                  <iframe style="width: 100%;height: 300px;" src="https://www.youtube.com/embed/PkO6AA6Up5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <!-- <video src="./assets/img/portfolio/sociopedia-demo.mp4" controls style="width: 100%;"></video> -->
                 <!-- </div> -->
 
                 <!-- <div class="swiper-slide">
