--- a/portfolio-details-capital-homepage.html
+++ b/portfolio-details-capital-homepage.html
@@ -49,7 +49,9 @@
 
                 <!-- <div class="swiper-slide"> -->
                   <!-- <img src="assets/img/portfolio/ecommerce-app.gif" alt=""> -->
-                  <video src="./assets/img/portfolio/static-site.mp4" controls style="width: 100%;"></video>
+                  <!-- <video src="./assets/img/portfolio/static-site.mp4" controls style="width: 100%;"></video> -->
+                  <iframe style="width: 100%;height: 300px;" src="https://www.youtube.com/embed/J4g5sbRgszc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <!-- <iframe width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
                 <!-- </div> -->
 
                 <!-- <div class="swiper-slide">
@@ -85,7 +87,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                ntroducing this remarkable project—a static homepage for a capital company created using HTML, CSS, and JavaScript. The project also includes a self-designed logo, showcasing the dedication and creativity invested in the branding process. With a focus on a visually appealing design, this project presents a professional and impactful homepage that effectively represents the company's identity. Experience the meticulous craftsmanship and attention to detail of this project, as it establishes a strong online presence for the capital company, leaving a lasting impression on visitors.
+                A static homepage for a capital company created using HTML, CSS, and JavaScript. The project also includes a self-designed logo, showcasing the dedication and creativity invested in the branding process. With a focus on a visually appealing design, this project presents a professional and impactful homepage that effectively represents the company's identity. Experience the meticulous craftsmanship and attention to detail of this project, as it establishes a strong online presence for the capital company, leaving a lasting impression on visitors.
               </p>
             </div>
           </div>
