--- a/portfolio-details-crypto.html
+++ b/portfolio-details-crypto.html
@@ -49,8 +49,10 @@
 
                 <!-- <div class="swiper-slide"> -->
                   <!-- <img src="assets/img/portfolio/ecommerce-app.gif" alt=""> -->
-                  <video src="./assets/img/portfolio/2023-03-06 19-36-31.mp4" controls style="width: 100%;"></video>
-                <!-- </div> -->
+                  <!-- <video src="./assets/img/portfolio/2023-03-06 19-36-31.mp4" controls style="width: 100%;"></video> -->
+                  <iframe style="width: 100%;height: 300px;" src="https://www.youtube.com/embed/RExjZGZMs1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                  <!-- </div> -->
 
                 <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
@@ -87,7 +89,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                Presenting an advanced cryptocoin tracking app created using React, JavaScript, MUI, and Victory charts. This application offers a wide range of features including comprehensive coin information, detailed charts, and timely news updates. Stay informed about the latest developments in the cryptocurrency world, analyze performance through intuitive charts, and access real-time data effortlessly. With its refined design powered by MUI, this app ensures a seamless and user-friendly experience. Embrace the future of cryptocurrency tracking with this state-of-the-art application.
+                An advanced cryptocoin tracking app created using React, JavaScript, MUI, and Victory charts. This application offers a wide range of features including comprehensive coin information, detailed charts, and timely news updates. Stay informed about the latest developments in the cryptocurrency world, analyze performance through intuitive charts, and access real-time data effortlessly. With its refined design powered by MUI, this app ensures a seamless and user-friendly experience.
               </p>
             </div>
           </div>
