--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <a href="./portfolio-details-crypto.html" class="portfolio-details-lightbox" data-glightbox="type: external"
               title="Portfolio Details">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/crypto-app.gif" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/crypto-app.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Crypto Analysis Full-Stack App</h4>
                   <p>App</p>
@@ -440,7 +440,7 @@
             <a href="./portfolio-details-ecommerce-app.html" class="portfolio-details-lightbox"
               data-glightbox="type: external" title="Portfolio Details">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/ecommerce-app.gif" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/ecommerce-app.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Ecommerce Full-Stack App</h4>
                   <p>App</p>
@@ -714,7 +714,7 @@
                 <h4>Entrepreneur</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Pratik captured our brand quit perfectly and I was impressed by his work.
+                  Pratik captured our brand quite perfectly and I was impressed by his work.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
