--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p>I'm a <span class="typed" data-typed-items="Fullstack Developer,UI/UX Designer"></span></p>
       <div class="social-links">
         <a href="mailto:prakar57@gmail.com"><i class="bx bx-mail-send"></i></a>
-        <a href="https://www.freelancer.com/u/Pratik0k" class="freelancer-icon"><svg xmlns="http://www.w3.org/2000/svg"
+        <a href="https://www.upwork.com/freelancers/~0183adbf80767b12c9" class="upwork-icon"><svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 60 60">
             <path
               d="M37.6 8.203l4.36 6.113L64 8.203M14.676 55.797l11.93-11.663-7.18-7.705M35.783 8.203l-6.376 5.75 10.724.4m-29.134-6.15l2.3 4.693 12.62.786M17.753 32.54l9.324-17.393L0 13.683m18.838 19.96l8.807 9.46 9.715-9.523 3.015-17.737-11.84-.604"
@@ -743,8 +743,8 @@
         <p>Creating value through premium creativity and cutting edge technology.</p>
         <div class="social-links">
           <a href="mailto:prakar57@gmail.com"><i class="bx bx-mail-send"></i></a>
-          <a href="https://www.freelancer.com/u/Pratik0k">
-            <span class="freelancer-icon2">
+          <a href="https://www.upwork.com/freelancers/~0183adbf80767b12c9">
+            <span class="upwork-icon2">
               <svg
               xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
               <path
