--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <h5>2020 - present</h5>
               <p><em>Remote</em></p>
               <ul>
-                <li>Experienced in handling 20+ clients projects</li>
+                <li>Experienced in handling many design and dev client projects</li>
                 <li>Quality Assured design and development</li>
                 <li>Almost 2 years of freelance experience</li>
                 <li>Hopefully working on your next freelance project 🚀</li>
