--- a/Pukar-Prototype.html
+++ b/Pukar-Prototype.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://www.figma.com/design/galUEAs9BgQNE5iezHDLFy/Untitled--Copy-?node-id=0-1&t=h0TT57ErxcaE116X-1">
+    <meta http-equiv="refresh" content="0; url="https://www.figma.com/proto/galUEAs9BgQNE5iezHDLFy/Pukar-Design?node-id=13-12&p=f&t=35GLDzk1Ylleen0U-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A3&show-proto-sidebar=1">
     <title>Redirecting...</title>
     <style>
         body {
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1>Redirecting you now...</h1>
-    <p>If you are not redirected automatically, <a href="https://www.figma.com/design/galUEAs9BgQNE5iezHDLFy/Untitled--Copy-?node-id=0-1&t=h0TT57ErxcaE116X-1">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://www.figma.com/proto/galUEAs9BgQNE5iezHDLFy/Pukar-Design?node-id=13-12&p=f&t=35GLDzk1Ylleen0U-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A3&show-proto-sidebar=1">click here</a>.</p>
 </body>
 </html>
